...
    <string name="settings_reset_now_confirm_evening">Счётчики вечерних азкаров будут обнулены.</string>
    <string name="settings_reset_now_confirm_morning">Счётчики утренних азкаров будут обнулены.</string>
    <string name="settings_reset_now_confirm_title">Сбросить прогресс?</string>
    <string name="settings_reset_now_footer">Счётчики раздела обнулятся сразу, не дожидаясь конца времени азкаров.</string>
    <string name="settings_reset_now_header">Сбросить сейчас</string>
    <string name="settings_reset_time_picker_title">Время азкаров</string>
    <string name="settings_reset_time_day_period">До или после полудня</string>
    <string name="settings_reset_time_hour">Часы</string>
    <string name="settings_reset_time_minute">Минуты</string>
    <string name="settings_title">Настройки</string>
    <string name="reminder_action">Сделать напоминание</string>
    <string name="share_text_reminder_evening_call">О рабы Аллаха, защитите себя и свою семью от сглаза, зависти и колдовства — прочитайте вечерние азкары.</string>
    <string name="share_text_reminder_evening_time">❗ Лучшее время для чтения вечерних азкаров — с Асра до Магриба.</string>
    <string name="share_text_reminder_evening_title">‼️ Вечерние азкары ‼️</string>
    <string name="share_text_reminder_morning_call">О рабы Аллаха, защитите себя и свою семью от сглаза, зависти и колдовства — прочитайте утренние азкары.</string>
...
